--- a/Zero-DCE_files/project.css
+++ b/Zero-DCE_files/project.css
@@ -34,7 +34,7 @@ td {
   background-color: white;
   box-shadow: 0px 1px 5px #999;
   font-family: 'Open Sans', sans-serif;
-  font-size: 10.5pt;
+  font-size: 12pt;
   /* line-height: 2; */
   -webkit-text-size-adjust: none;
 }
@@ -61,7 +61,7 @@ td {
 .img_container .leftView {
   width: 95%;
   /* background: rgba(248, 73, 50, 0.4); */
-  box-shadow: 3px 8px 5px 0px rgba(0, 0, 0, 0.2)
+  /*box-shadow: 3px 8px 5px 0px rgba(0, 0, 0, 0.2)*/
 }
 
 .img_container .leftView .mask {
@@ -76,10 +76,19 @@ td {
 }
 
 .img_container .leftView .small {
+  width: 65%;
+  position:relative;
+}
+
+.img_container .leftView .std {
   width: 100%;
   position:relative;
 }
 
+.img_container .leftView .big {
+  width: 110%;
+  position:relative;
+}
 .img_container .rightView {
   width: 400px;
   height: 400px;
@@ -221,9 +230,9 @@ a:active {
 
 .head {
   text-align: center;
-  margin: 0.5em 0;
-  padding: 0.5em 0;
-  background-color: #e9e9e9;
+  margin: 0.6em 0;
+  padding: 0.6em 0;
+  background-color: #f3ecec40;
   text-shadow: 1px 1px 3px #cccccc;
 }
 
@@ -242,12 +251,12 @@ a:active {
 }
 
 .authors {
-  font-size: 12pt;
+  font-size: 14pt;
   margin: 0 0 1em 0;
 }
 
 .affiliations {
-  font-size: 11pt;
+  font-size: 13pt;
   margin: -0.5em 0 10pt 0;
 }
 
@@ -508,7 +517,7 @@ body {
 }
 
 img {
-  margin-bottom: -4px;
+  margin-bottom: 0px;
 }
 
 .caption-container {
